# src/controllers/index.ts
@@ -1,1 +1,2 @@
 export * from "./auth.controller";
+export * from "./category.controller";
